--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=${DB_HOST}
+spring.datasource.url=jdbc:mysql://${DB_HOST}/devbopguestbookdb
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
