--- a/src/main/resources/backup.properties
+++ b/src/main/resources/backup.properties
@@ -5,6 +5,6 @@ spring.liquibase.enabled=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.datasource.url=jdbc:mysql://${DB_HOST}/devbopguestbookdb
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://127.0.0.1:8886/devbopguestbook
+spring.datasource.username=root
+spring.datasource.password=root
